	PR tree-optimization/33017 	* tree-data-ref.c (split_constant_offset) <case SSA_NAME>: Don't 	recurse for pure or const function calls.

* gcc.dg/pr33017.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@128107 138bc75d-0d04-0410-961f-82ee72b054a4